--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -160,7 +160,7 @@ locale: en
                 {% endcomment %}
 
                 <!-- comma commenting system -->
-                <div class="col-md-10">
+                <div>
                     {% include comma.html %}
                 </div>
 
