--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,11 @@
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
-
+    
+    <!-- marked.js for parsing markdown (https://github.com/markedjs/marked) -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
+    <script src="{{site.baseurl}}/assets/js/marked.min.js"></script>
+    
     {% include tracking-header.html %}
 
 
