--- a/_includes/comma-comments.html
+++ b/_includes/comma-comments.html
@@ -21,7 +21,7 @@
 </form> -->
 
 <form id="new-comment-form" action="{{ site.commentserver }}">
-    <input type="hidden" name="post" value="{{ page.name }}">
+    <input type="hidden" name="post" value="{{ loc }}-{{ page.name }}">
     <div class="form-group">
         <input id="comment-name" type="text" name="name" class="form-control" aria-describedby="name-note" placeholder="{{ strings.comment_name }}" required />
         <!-- <small id="name-note" class="form-text text-muted">{{ strings.comment_name_note }}</small> -->
@@ -153,7 +153,7 @@ it is preferable to load the script in the <head> section of default.html
 
     domReady(async function() {
         let form = document.getElementById("new-comment-form");
-        let commentsUrl = "{{ site.commentserver }}/{{ page.name }}";
+        let commentsUrl = "{{ site.commentserver }}/{{ loc }}-{{ page.name }}";
 
         form.addEventListener("submit", (event) => {
             event.preventDefault();
