Improvements to the comment form

--- a/_includes/comma-comments.html
+++ b/_includes/comma-comments.html
@@ -23,7 +23,9 @@
 <form id="new-comment-form" action="{{ site.commentserver }}">
     <input type="hidden" name="post" value="{{ loc }}-{{ page.name }}">
     <div class="form-group">
-        <input id="comment-name" type="text" name="name" class="form-control" aria-describedby="name-note" placeholder="{{ strings.comment_name }}" required />
+        <label for="comment-name">{{ strings.comment_name }}</label>
+        <input id="comment-name" type="text" name="name" class="form-control" aria-describedby="name-note" required />
+        <!-- <input id="comment-name" type="text" name="name" class="form-control" aria-describedby="name-note" placeholder="{{ strings.comment_name }}" required /> -->
         <!-- <small id="name-note" class="form-text text-muted">{{ strings.comment_name_note }}</small> -->
     </div>
     <!-- <div class="form-group"> -->
@@ -32,11 +34,14 @@
         <!-- <small id="email-note" class="form-text text-muted">{{ strings.comment_email_note }}</small> -->
     <!-- </div> -->
     <div class="form-group">
-        <input id="comment-url" type="url" name="url" class="form-control" aria-describedby="url-note" placeholder="{{ strings.comment_web }}" />
-        <!-- <small id="url-note" class="form-text text-muted">{{ strings.comment_web_note }}</small> -->
+        <label for="comment-url">{{ strings.comment_url }}</label>
+        <input id="comment-url" type="url" name="url" class="form-control" aria-describedby="url-note" placeholder="{{ strings.comment_url_note }}" />
+         <!-- <small id="url-note" class="form-text text-muted">{{ strings.comment_url_note }}</small> -->
     </div>
     <div class="form-group">
-        <textarea id="comment-area" name="message" class="form-control" rows="5" placeholder="{{ strings.comment_txt }}" required ></textarea>
+        <label for="comment-area">{{ strings.comment_txt }}</label>
+        <textarea id="comment-area" name="message" class="form-control" rows="5" required ></textarea>
+        <!-- <textarea id="comment-area" name="message" class="form-control" rows="5" placeholder="{{ strings.comment_txt }}" required ></textarea> -->
     </div>
     <div class="form-group">
         <div class="form-check">
