--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -149,6 +149,7 @@ locale: en
 
         </div>
     </div>
+    <button onclick="goTop()" id="scroll-button" class="arrow up" title="Go to top">Top</button>
 </div>
 
 
@@ -171,3 +172,27 @@ locale: en
         </div>
     </div>
 </div>
+
+
+
+<script language="javascript">
+// Get the button:
+let mybutton = document.getElementById("scroll-button");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {pageScroll()};
+
+function pageScroll() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+    } else {
+        mybutton.style.display = "none";
+    }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function goTop() {
+    document.body.scrollTop = 0;    // For Safari
+    document.documentElement.scrollTop = 0;     // For Chrome, Firefox, IE and Opera
+}
+</script>
