--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,38 +2,8 @@
  * Further customizations to Mundana theme for Jekyll
  */
 
-/*textarea {
-    field-sizing: content;
-}
-*/
 
-
-/* first implementation */
-#scroll-button {
-    display: none;
-    position: fixed;
-    bottom: 12%;
-    right: 30px;
-    z-index: 2000;      /* make sure it does not overlap */
-    border: none;
-    outline: none;
-    background-color: var(--primary);
-    color: white;
-    cursor: pointer;    /* add a mouse pointer on hover */
-    padding: 12px;
-    border-width: 0 3px 3px 0;
-    border-radius: 12px;
-    font-size: 1.2rem;
-}
-
-
-#scroll-button:hover {
-  background-color: var(--secondary);
-}
-
-
-/* second implementation */
-
+/* go to the top button */
 button.back-to-top{
     margin: 0 !important;
     padding: 0 !important;
