Info aout back-to-top javascript code

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -179,7 +179,10 @@ locale: en
 
 
 <script language="javascript">
-// Back to top
+
+// back to top button
+// code taken from here: https://codepen.io/kumar/pen/dWEgLg
+
 var amountScrolled = 200;
 var amountScrolledNav = 25;
 
